--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,8 @@
 {
-    "name": "Stealmoji",
+    "name": "Emote Cloner Fork",
     "description": "Steal emojis on mobile with ease.",
     "authors": [
-        {
-            "name": "Fiery",
-            "id": "890228870559698955"
-        },
-        {
-            "name": "pylix",
-            "id": "492949202121261067"
-        }
+        
     ],
     "main": "src/index.ts",
     "vendetta": {
